--- a/src/pages/main/scss/pets.scss
+++ b/src/pages/main/scss/pets.scss
@@ -108,6 +108,9 @@
             cursor: pointer;
             background-color: #ffffff;
             box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+            & button {
+              background-color: #ffffff;
+            }
           }
           @media screen and (max-width: 1279px) {
             &:last-child {
